@@ -1,7 +1,9 @@
 package ch.schlierelacht.admin.security;
 
-import ch.schlierelacht.admin.jooq.tables.daos.LoginDao;
+import java.util.List;
+
 import lombok.RequiredArgsConstructor;
+
 import org.jspecify.annotations.NonNull;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,7 +11,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import ch.schlierelacht.admin.jooq.tables.daos.LoginDao;
 
 @Service
 @RequiredArgsConstructor
@@ -21,9 +23,9 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     public @NonNull UserDetails loadUserByUsername(@NonNull String email) throws UsernameNotFoundException {
         return loginDao.fetchOptionalByEmail(email)
                        .map(login -> new User(login.getEmail(), login.getPassword(),
-                                              login.getActive() != null ? login.getActive() : true,
+                                              login.getActive(),
                                               true, true, true,
-                                              Collections.emptyList()))
+                                              List.of()))
                        .orElseThrow(() -> new UsernameNotFoundException("No user present with email: " + email));
     }
 }
